index.html NEW NEW Website 13
shortned link name and changed web title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Punjabi Class Registration Form</title>
+    <title>Punjabi Class Registration</title>
     <style>
         :root {
             --banner-color: #007BFF; /* Banner background color */
@@ -125,7 +125,7 @@
         <h2>Sign Up</h2>
         <div class="text-box">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeX6Tdlj-BQa7ga0TZbx9td_oiiYg7lcnP1QCUf8oo54YfNug/viewform?usp=sf_link" target="_blank">
-                Click Here to Access the Punjabi Class Registration Form
+                Punjabi Class Registration Form
             </a>
             <div class="additional-info">
                 Please use this form to register for 2024-2025 Punjabi Class. Annual tuition is $150 for each student; $100 siblings. Please make checks payable to CSMA; Please write Student Name in Memo Line of check.
