index.html NEW NEW WEBSITE 15
banner changed back

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             --text-color: blue; /* Color for the sign-up page link text */
             --description-color: black; /* Color for the description text */
             --description-margin-top: 20px; /* Margin top for the description text */
-            --banner-height: 104px; /* Height for the banner */
+            --banner-height: 80px; /* Original height for the banner */
             --button-padding: 10px 20px; /* Padding for the buttons */
             --section-gap: 300px; /* Reduced gap between sections */
             --padding-top: 20px; /* Padding between the hyperlink and the banner */
@@ -37,7 +37,7 @@
 
         .banner {
             background-color: var(--banner-color); /* Banner background color */
-            height: calc(var(--banner-height) * 1.3); /* Increased height for the banner */
+            height: var(--banner-height); /* Original height for the banner */
             position: fixed; /* Fixed positioning to keep it at the top */
             width: 100%; /* Full width of the viewport */
             top: 0; /* Position at the top */
